--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -3,20 +3,33 @@ plugins {
 }
 
 android {
-    compileSdk 30
+
+    def sdk = rootProject.ext.sdk
+
+    compileSdk sdk.compileSdkVersion
 
     defaultConfig {
-        minSdk 21
-        targetSdk 30
-        versionCode 1
-        versionName "1.0"
+
+        minSdk sdk.minSdkVersion
+        targetSdk sdk.targetSdkVersion
+
+        def versions = rootProject.ext.versions
+
+        versionCode versions.appVersionCode
+        versionName versions.appVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
+
+        debug {
+            buildConfigField "String", "VERSION_NAME", "\"${rootProject.ext.versions.appVersionName}\""
+        }
+
         release {
+            buildConfigField "String", "VERSION_NAME", "\"${rootProject.ext.versions.appVersionName}\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -28,7 +41,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.test:rules:1.3.0'
@@ -36,3 +48,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+task makeAar(type: Copy) {
+    delete 'libs/utils-debug.aar'
+    delete 'libs/utils-release.aar'
+    from ('build/outputs/aar/')
+    into ('libs/')
+}
+
+makeAar.dependsOn(build)
+
+task moveAar(type: Copy) {
+    from ('libs/utils-release.aar')
+    into ('../app/libs/')
+    rename ('utils-release.aar', "dan-utils-${rootProject.ext.versions.appVersionName}.aar")
+}
+
+moveAar.dependsOn(makeAar)
